crates/talus-core/src/snapshots/talus_core__property__tests__property_boolean_false.snap
---
source: crates/talus-core/src/property.rs
expression: "Property::Boolean(false)"
---
{
  "type": "Boolean",
  "value": false
}
