crates/talus-core/src/snapshots/talus_core__property__tests__property_boolean_true.snap
---
source: crates/talus-core/src/property.rs
expression: "Property::Boolean(true)"
---
{
  "type": "Boolean",
  "value": true
}
