crates/talus-core/src/snapshots/talus_core__property__tests__property_date_iso.snap
---
source: crates/talus-core/src/property.rs
expression: "Property::DateIso { year: 2025, month: 1, day: 20, }"
---
{
  "type": "DateIso",
  "value": {
    "year": 2025,
    "month": 1,
    "day": 20
  }
}
