crates/talus-core/src/snapshots/talus_core__property__tests__property_node_ref.snap
---
source: crates/talus-core/src/property.rs
expression: "Property::NodeRef(stable_node_id)"
---
{
  "type": "NodeRef",
  "value": "00000000-0000-4000-8000-000000000001"
}
