crates/talus-core/src/snapshots/talus_core__property__tests__property_number.snap
---
source: crates/talus-core/src/property.rs
expression: "Property::Number(42.0)"
---
{
  "type": "Number",
  "value": 42.0
}
