crates/talus-core/src/snapshots/talus_core__property__tests__property_select_token.snap
---
source: crates/talus-core/src/property.rs
expression: "Property::select_token(\"in_progress\").unwrap()"
---
{
  "type": "SelectToken",
  "value": "in_progress"
}
