crates/talus-core/src/snapshots/talus_core__property__tests__property_text.snap
---
source: crates/talus-core/src/property.rs
expression: "Property::Text(\"Alice Chen\".into())"
---
{
  "type": "Text",
  "value": "Alice Chen"
}
